# stem-defect-segmentation

./: .gitignore  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
configs/: confusion.yaml  defect_sweep.yaml  dose_sweep.yaml  fair_tuning.yaml  imbalance_sweep.yaml  materials.yaml
data/: README.md
data/real/: README.md
data/sample/: graphene_d150.npz  hbn_d150.npz  mos2_d200.npz  oxide_d250.npz
docs/: api.md
models/: MODEL_CARD.md  unet.pt
notebooks/: tutorial.ipynb
results/: confusion.json  defect_sweep.json  dose_sweep.json  fair_tuning.json  imbalance_sweep.json  materials.json  metrics.json
scripts/: build_notebook.py  make_figures.py
src/stemseg/: __init__.py  benchmark.py  classical.py  cli.py  features.py  io.py  metrics.py  net.py  plots.py  real.py  sim.py  train.py
tests/: test_committed_artifacts.py  test_metrics.py  test_models.py  test_pipeline.py  test_sim.py
